--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,117 @@
 .App {
     font-family: sans-serif;
-    text-align: center;
-    justify-content: center;
     width: 100%;
+    height: 100%;
+    padding: 8px;
+    display: flex;
+    flex-direction: row;
   }
 
-  .Container {
-    display: flex;
-    justify-content: center;
+  .mapContainer {
+    width: 100%;
+    height: 100%;
   }
   
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  html {
+    background-color: #2A263E;
+  }
+  
+  label {
+    color: #E7E4ED;
   }
   
   .leaflet-container {
-    margin-top: 20px;
-    margin-left: 20px;
-    width: 80%;
     height: 60vh;
+    border-radius: 16px;
   }
+
+   .checkboxContainer {
+    transition: box-shadow .3s;
+    display: inline-block;
+    background-color: #3B3955;
+    padding: 8px;
+    border-radius: 8px;
+  }
+
+  .checkboxContainer input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+
+  .notChecked {
+    position: relative;
+    height: 20px;
+    width: 20px;
+    background-color: #E7E4ED; 
+    margin-right: 4px;
+    border-radius: 4px;
+  }
+
+  .checked {
+    position: relative;
+    height: 20px;
+    width: 20px;
+    background-color: #36FCC0; 
+    margin-right: 4px;
+    border-radius: 4px;
+    text-size-adjust: auto;
+    resize: none;
+    justify-content: center;
+    text-align: center;
+  }
+
+
+  .checked::after {
+    content: "\2713";
+  }
+
+   .checkboxContainer:hover {
+    background-color: #8A2EB2;
+    box-shadow: 0 0 11px #36FCC0;  
+   }
+
+   .checkboxContainer:hover .notChecked {
+    background-color: #49977F;
+   }
+   
+  .checkboxDiv {
+    display: flex;
+    justify-content: center;
+  }
+
+  .datePicker fieldset.MuiOutlinedInput-notchedOutline {
+    border-color: #E7E4ED;
+  }
+
+  .leftColumn {
+    width: 50%;
+  }
+
+  .rightColumn {
+    width: 50%;
+  }
+
+  ::-moz-selection {
+    background: #9555FE;
+  }
+  ::-webkit-selection {
+    background: #9555FE;
+  }
+  ::selection {
+    background: #9555FE;
+  }
+
+
+  /* .css-1d3z3hw-MuiOutlinedInput-notchedOutline {
+    color: wheat;
+  }
+
+  .css-rhmlg1-MuiTypography-root-MuiDayCalendar-weekDayLabel {
+    color: #E7E4ED
+  }
+   */
+ 
   
