--- a/src/styles.css
+++ b/src/styles.css
@@ -12,16 +12,6 @@
     height: 100%;
   }
   
-  html {
-    background-color: #2A263E;
-  }
-  
-  label {
-    color: #E7E4ED;
-    font-size: large;
-    font-weight: 500;
-  }
-  
   .leaflet-container {
     height: 70vh;
     border-radius: 16px;
@@ -107,16 +97,6 @@
     width: 40%;
   }
 
-  ::-moz-selection {
-    background: #9555FE;
-  }
-  ::-webkit-selection {
-    background: #9555FE;
-  }
-  ::selection {
-    background: #9555FE;
-  }
-
 .currencyInput {
   height: 52px;
   background-color: #2A263E;
@@ -140,16 +120,42 @@
   outline: none;
 }
 
-h2 {
-  color: #E7E4ED;
-}
-
 .dateContainer {
   margin: 16px;
 }
 
 .updateButton {
-  /* margin-left: 32px; */
   width: 300px
 }
-  
+
+.loadingSpinnerContainer {
+  background-color: transparent;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 60vh;
+}
+
+html {
+  background-color: #2A263E;
+}
+
+h2 {
+  color: #E7E4ED;
+}
+
+label {
+  color: #E7E4ED;
+  font-size: large;
+  font-weight: 500;
+}
+
+::-moz-selection {
+  background: #9555FE;
+}
+::-webkit-selection {
+  background: #9555FE;
+}
+::selection {
+  background: #9555FE;
+}
