--- a/src/styles.css
+++ b/src/styles.css
@@ -65,12 +65,16 @@
   }
 
    .checkboxContainer:hover {
-    background-color: #8A2EB2;
+    background-color: #FEDEC8;
     box-shadow: 0 0 11px #36FCC0;  
    }
 
    .checkboxContainer:hover .notChecked {
     background-color: #49977F;
+   }
+
+   .checkboxContainer:hover label {
+    color: #2A263E;
    }
    
   .checkboxDiv {
@@ -128,12 +132,70 @@
   width: 300px
 }
 
+.disabled {
+  transition: box-shadow .3s;
+    display: flex;
+    width: 200px;
+    height: 40px;
+    background-color: #888888;
+    padding: 8px;
+    border-radius: 8px;
+    justify-content: center;
+    position: relative;
+}
+
 .loadingSpinnerContainer {
   background-color: transparent;
   display: flex;
   flex-direction: row;
   justify-content: center;
   height: 60vh;
+}
+
+.PieChart {
+  /* background-color: #FEDEC8; */
+  background-color: #2A263E;
+  border-radius: 15px;
+  width: 300px;
+  height: 300px;
+  margin: 8px;
+  padding: 8px;
+  color: #36FCC0;
+
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 2s; /* Firefox < 16 */
+      -ms-animation: fadein 2s; /* Internet Explorer */
+       -o-animation: fadein 2s; /* Opera < 12.1 */
+          animation: fadein 2s;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
 
 html {
